wal-rsx/tests/attributes/event_attributes_fail.stderr
error: expected `=`
 --> tests/attributes/event_attributes_fail.rs:5:24
  |
5 |     rsx! { <div onclick></div> };
  |                        ^

error: expected curly braces
 --> tests/attributes/event_attributes_fail.rs:6:25
  |
6 |     rsx! { <div onclick=></div> };
  |                         ^

error: expected `=`
 --> tests/attributes/event_attributes_fail.rs:7:25
  |
7 |     rsx! { <div onclick {Callback::new(|_event: wal_core::events::MouseEvent)| {}}></div> };
  |                         ^

error: Duplicate attribute `onclick`
  --> tests/attributes/event_attributes_fail.rs:11:13
   |
11 |             onclick={Callback::new(|_event: wal_core::events::MouseEvent| {})}>
   |             ^^^^^^^

error: expected curly braces
  --> tests/attributes/event_attributes_fail.rs:14:26
   |
14 |     rsx! { <div onclick= ondblclick={Callback::new(|_event: wal_core::events::MouseEvent| {})}></div> };
   |                          ^^^^^^^^^^

error: expected curly braces
  --> tests/attributes/event_attributes_fail.rs:17:25
   |
17 |     rsx! { <div onclick="value"></div> };
   |                         ^^^^^^^

error: Expected a non-empty expression block
  --> tests/attributes/event_attributes_fail.rs:18:25
   |
18 |     rsx! { <div onclick={}></div> };
   |                         ^^

error[E0308]: mismatched types
  --> tests/attributes/event_attributes_fail.rs:15:26
   |
15 |     rsx! { <div onclick={Callback::new(|_event: wal_core::events::Event| {})}></div> };
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Callback<MouseEvent>`, found `Callback<Event>`
   |
   = note: expected struct `Callback<MouseEvent>`
              found struct `Callback<Event>`

error[E0308]: mismatched types
  --> tests/attributes/event_attributes_fail.rs:16:26
   |
16 |     rsx! { <div onclick={Callback::new(|_event: wal_core::events::DragEvent| {})}></div> };
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Callback<MouseEvent>`, found `Callback<DragEvent>`
   |
   = note: expected struct `Callback<MouseEvent>`
              found struct `Callback<DragEvent>`

error[E0308]: mismatched types
  --> tests/attributes/event_attributes_fail.rs:19:26
   |
19 |     rsx! { <div onclick={"value"}></div> };
   |                          ^^^^^^^ expected `Callback<MouseEvent>`, found `&str`
   |
   = note: expected struct `Callback<MouseEvent>`
           found reference `&'static str`
